<resources>
    <string name="app_name" translatable="false">ReDrive</string>

    <!-- ON_BOARD-->
    <string name="on_board1_title">Control Your Finances</string>
    <string name="on_board1">Take charge of your spending with detailed tracking of your fuel and maintenance expenses. Monitor every penny to ensure your budget stays on track and your savings grow.</string>
    <string name="on_board2_title">Vehicles Details In One Place</string>
    <string name="on_board2">Simplify your vehicle management by keeping all refuel logs and repair information together. No more searching for receipts or maintenance records—everything you need is right here.</string>
    <string name="on_board3_title">Clear and Insightful Stats</string>
    <string name="on_board3">Gain valuable insights with clear statistics on your fuel consumption and maintenance costs. Make informed decisions with easy-to-read graphs and summaries, designed to help you optimize your vehicle\'s performance.</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>


    <!-- Password Errors-->
    <string name="password_error_digit">Password must contain at least one digit.</string>
    <string name="password_error_lowercase">Password must contain at least one lowercase letter.</string>
    <string name="password_error_uppercase">Password must contain at least one uppercase letter.</string>
    <string name="password_error_length">Password must be at least 8 characters long.</string>
    <string name="password_error_special">Password must contain at least one special character.</string>
    <string name="password_confirmation_error">Passwords do not match.</string>
    <string name="password_error_general">Password must contain at least one digit, one special character, one lowercase letter, one uppercase letter, and be at least 8 characters long.</string>
    <!-- SIGN_IN SIGN_UP-->
    <string name="sign_in_to_redrive">Sign in to ReDrive</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="sign_up_to_redrive">Sign up to ReDrive</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="please_enter_real_names">Please enter real names</string>
    <string name="invalid_email">Invalid email</string>

    <string name="is_current_vehicle_error">You can not delete this vehicle because it is set as default</string>

    <string name="empty_string" translatable="false"> </string>
    <string name="empty_field_error">This field can not be empty</string>
    <string name="required">Required</string>
    <string name="fields_arent_valid">Please check your data </string>
    <string name="password_error">Your password doesn\'t meet the required criteria </string>

    <!-- LOCALE_ERRORS-->
    <string name="error_sql">Unable to load data from the database. Please try again later.</string>
    <string name="data_not_found">No data found. Please check your search criteria and try again.</string>
    <string name="storage_error">Error while accessing storage</string>
    <string name="unknown_error_datastore">Sorry, an unknown error occurred. Please try again later.</string>

    <!-- FIREBASE_ERRORS-->
    <string name="firebase_auth_error">An error occurred with Firebase Authentication. Please try again later.</string>
    <string name="invalid_credentials">The credentials provided are invalid. Please check your email and password and try again.</string>
    <string name="user_collision">An account with this email already exists. Please use a different email or log in to the existing account.</string>
    <string name="no_user_detected">No user detected with the provided credentials. Please sign up or check your login information.</string>
    <string name="unknown_error_firebase">An unknown error occurred. Please try again later or contact support.</string>

    <!-- FRAGMENTS-->
    <string name="profile">Profile</string>
    <string name="redrive">Redrive</string>
    <string name="logs">Logs</string>
    <string name="refuel">Refuel</string>

    <string name="summary">Summary</string>
    <string name="cost_per_km">Cost per km</string>
    <string name="avg_consumption">Avg Consumption</string>
    <string name="overview">Overview</string>
    <string name="last_refuel">Last refuel</string>
    <string name="refuel_date">Refuel Date</string>
    <string name="odometer">Odometer</string>
    <string name="fuel_volume">Fuel Volume</string>
    <string name="unit_price">Unit price</string>
    <string name="notes">Notes</string>
    <string name="full_tank">Full Tank</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="missed_previous">Missed previous</string>
    <string name="ok">OK</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="add_vehicle_first">Add vehicle first</string>
    <string name="settings">Settings</string>
    <string name="edit_vehicles">Edit vehicles</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="signout">Sign Out</string>
    <string name="currency">Currency</string>
    <string name="distance_unit">Distance unit</string>
    <string name="save_uppercase">SAVE</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="one_symbol">✓ One special symbol</string>
    <string name="uppercase_and_lowercase_letter">✓ Uppercase and lowercase letter</string>
    <string name="at_least_one_number">✓ At least one number</string>
    <string name="password_length">✓ 8 or more characters</string>


</resources>