<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_on_board"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:src="@drawable/ic_automobile_repair">

    </ImageView>

    <TextView
        style="@style/TextAppearance.ReDrive.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/on_board2_title"
   />

    <TextView
        style="@style/TextAppearance.ReDrive"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/on_board2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btt_skip"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:backgroundTint="#638FFF"
            android:text="@string/skip"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.ReDrive">

        </Button>

        <Button
            android:id="@+id/btt_Next"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:backgroundTint="#638FFF"
            android:text="@string/next"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.ReDrive">

        </Button>


    </LinearLayout>


</LinearLayout>