<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="voloshyn.android.redrive.presentation.MainActivity">

    <FrameLayout
        android:id="@+id/layout_user_initial"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#8FD2B8"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_user_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_bike"
            android:textAppearance="@style/TextAppearance.ReDrive.Cards"
            android:textSize="34sp"
            android:textColor="@color/white"
            tools:text="RR">

        </TextView>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_card_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.ReDrive.Cards.Medium"
        android:textColor="@color/md_theme_tertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_user_initial">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_card"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:elevation="4dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_vehicle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="@dimen/medium_margin"
                android:src="@drawable/ic_car_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/tv_edit_vehicles"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:text="@string/edit_vehicles"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.ReDrive.Cards.Medium"

                app:layout_constraintBottom_toBottomOf="@id/iv_vehicle"
                app:layout_constraintStart_toEndOf="@id/iv_vehicle"
                app:layout_constraintTop_toTopOf="@id/iv_vehicle">

            </TextView>

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:src="@drawable/ic_settings"
                app:layout_constraintStart_toStartOf="@id/iv_vehicle"
                app:layout_constraintTop_toBottomOf="@id/iv_vehicle">

            </ImageView>

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.ReDrive.Cards.Medium"
                app:layout_constraintBottom_toBottomOf="@id/iv_settings"
                app:layout_constraintStart_toEndOf="@id/iv_settings"
                app:layout_constraintTop_toTopOf="@id/iv_settings">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_settings">

            </View>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_card_settings"
        app:layout_constraintTop_toBottomOf="@id/settings_card"
        android:textAppearance="@style/TextAppearance.ReDrive.Cards.Medium"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/privacy_policy">

    </TextView>

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_privacy_policy"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_policy"
        android:textAppearance="@style/TextAppearance.ReDrive.Cards.Medium"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/signout">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>